<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#bdaa5b"
    android:orientation="vertical"
    android:weightSum="1" >

    <TextView
        android:id="@+id/batteryinfo"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/header"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/batteryinfo"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:entries="@array/video_arrays"
        android:prompt="@string/video_prompt" />

    <VideoView
        android:id="@+id/VideoView"
        android:layout_width="fill_parent"
        android:layout_height="170dp"
        android:layout_below="@id/spinner1"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="30dp" />
    
    <LinearLayout
        android:id="@+id/loclayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/checkbattery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_weight="1"
            android:background="@drawable/button_red_selector"
            android:gravity="center"
            android:text="@string/checkbatt"
            android:textSize="14sp" />
    </LinearLayout>
    

    <LinearLayout
        android:id="@+id/piclayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/loclayout"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:weightSum="1" >

        <Button
            android:id="@+id/playvideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_red_selector"
            android:text="@string/playvideo"
            android:textSize="14sp" />

        <Button
            android:id="@+id/savevideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/button_red_selector"
            android:text="@string/savevideo"
            android:textSize="14sp" />
    </LinearLayout>

    
</RelativeLayout>